--- a/.github/workflows/CLI-ActixPostgres-CI.yml
+++ b/.github/workflows/CLI-ActixPostgres-CI.yml
@@ -41,7 +41,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d postgres -b actix-web test-project
+          command: run 
+          args: --bin create-rust-app -- create -c -d postgres -b actix-web test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -67,7 +68,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth,container,graphql,storage,utoipa test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth,container,graphql,storage,utoipa test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -93,7 +95,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=container test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=container test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -119,7 +122,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -145,7 +149,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=storage test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=storage test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -171,7 +176,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=graphql test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=graphql test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -197,7 +203,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth,utoipa test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d postgres -b actix-web --plugins=auth,utoipa test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
