--- a/.github/workflows/CLI-ActixSqlite-CI.yml
+++ b/.github/workflows/CLI-ActixSqlite-CI.yml
@@ -42,7 +42,8 @@ jobs:
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: 
-            cargo run --bin create-rust-app -- create -c -d sqlite -b actix-web test-project
+            cargo run
+          args: --bin create-rust-app -- create -c -d sqlite -b actix-web test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -69,7 +70,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth,container,graphql,storage,utoipa test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth,container,graphql,storage,utoipa test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -95,7 +97,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=container test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=container test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -121,7 +124,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -147,7 +151,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=storage test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=storage test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -173,7 +178,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=graphql test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=graphql test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
@@ -199,7 +205,8 @@ jobs:
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - uses: actions-rs/cargo@v1.0.3
         with:
-          command: run --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth,utoipa test-project
+          command: run
+          args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth,utoipa test-project
       - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
