--- a/.github/workflows/CLI-PoemSqlite-CI.yml
+++ b/.github/workflows/CLI-PoemSqlite-CI.yml
@@ -39,6 +39,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -67,6 +68,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -94,6 +96,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -121,6 +124,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -148,6 +152,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -175,6 +180,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
