--- a/.github/workflows/CLI-PoemPostgres-CI.yml
+++ b/.github/workflows/CLI-PoemPostgres-CI.yml
@@ -39,6 +39,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -66,6 +67,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -93,6 +95,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -120,6 +123,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -147,6 +151,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -174,6 +179,7 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PP-${{ hashFiles('**/Cargo.lock') }}
+      - run: git config user.name test
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
