--- a/.github/workflows/CLI-ActixPostgres-CI.yml
+++ b/.github/workflows/CLI-ActixPostgres-CI.yml
@@ -40,6 +40,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run 
@@ -68,6 +69,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -96,6 +98,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -124,6 +127,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -152,6 +156,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -180,6 +185,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -208,6 +214,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AP-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
