--- a/.github/workflows/CLI-ActixSqlite-CI.yml
+++ b/.github/workflows/CLI-ActixSqlite-CI.yml
@@ -40,6 +40,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: 
@@ -70,6 +71,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -98,6 +100,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -126,6 +129,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -154,6 +158,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -182,6 +187,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -210,6 +216,7 @@ jobs:
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
       - run: git config user.name test
+      - run: git config user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
