try setting global configuration?

--- a/.github/workflows/CLI-ActixSqlite-CI.yml
+++ b/.github/workflows/CLI-ActixSqlite-CI.yml
@@ -39,8 +39,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: 
@@ -70,8 +70,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -99,8 +99,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -128,8 +128,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -157,8 +157,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -186,8 +186,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -215,8 +215,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-AS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
