--- a/.github/workflows/CLI-PoemSqlite-CI.yml
+++ b/.github/workflows/CLI-PoemSqlite-CI.yml
@@ -39,8 +39,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -69,8 +69,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -98,8 +98,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -127,8 +127,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -156,8 +156,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
@@ -185,8 +185,8 @@ jobs:
             **/.cargo/.build
             **/target
           key: ${{ runner.os }}-cargo-cli-PS-${{ hashFiles('**/Cargo.lock') }}
-      - run: git config user.name test
-      - run: git config user.email example@email.com
+      - run: git config --global user.name test
+      - run: git config --global user.email example@email.com
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
