make it actually compile the generated project

--- a/.github/workflows/CLI-ActixSqlite-CI.yml
+++ b/.github/workflows/CLI-ActixSqlite-CI.yml
@@ -45,10 +45,10 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web test-project
-      - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Actix-Sqlite-All:
     needs: [Actix-Sqlite-None]
@@ -74,10 +74,10 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth,container,graphql,storage,utoipa test-project
-      - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
   
   Actix-Sqlite-Container:
     needs: [Actix-Sqlite-None]
@@ -103,10 +103,10 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=container test-project
-      - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Actix-Sqlite-Auth:
     needs: [Actix-Sqlite-None]
@@ -132,10 +132,10 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth test-project
-      - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Actix-Sqlite-Storage:
     needs: [Actix-Sqlite-None]
@@ -161,10 +161,10 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=storage test-project
-      - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Actix-Sqlite-GraphQL:
     needs: [Actix-Sqlite-None]
@@ -189,11 +189,11 @@ jobs:
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
-          args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=graphql test-project
-      - run: cd test-project
+          args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=graphql,auth test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Actix-Sqlite-Utoipa:
     needs: [Actix-Sqlite-None]
@@ -219,7 +219,7 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b actix-web --plugins=auth,utoipa test-project
-      - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
