--- a/.github/workflows/CLI-PoemSqlite-CI.yml
+++ b/.github/workflows/CLI-PoemSqlite-CI.yml
@@ -45,10 +45,10 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem test-project
-      - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
  
   Poem-Sqlite-All:
@@ -75,10 +75,10 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth,container,graphql,storage test-project
-      - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Sqlite-Container:
     needs: [Poem-Sqlite-None]
@@ -104,10 +104,10 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=container test-project
-      - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Sqlite-Auth:
     needs: [Poem-Sqlite-None]
@@ -133,10 +133,10 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth test-project
-      - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Sqlite-Storage:
     needs: [Poem-Sqlite-None]
@@ -162,10 +162,10 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=storage test-project
-      - run: cd test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Sqlite-GraphQL:
     needs: [Poem-Sqlite-None]
@@ -190,8 +190,8 @@ jobs:
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: run
-          args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=graphql test-project
-      - run: cd test-project
+          args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=graphql,auth test-project
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
+          args: --manifest-path=test-project/Cargo.toml
