--- a/.github/workflows/CLI-PoemPostgres-CI.yml
+++ b/.github/workflows/CLI-PoemPostgres-CI.yml
@@ -17,7 +17,7 @@ env:
   CARGO_TERM_COLOR: always
   
 concurrency:
-  group:  CI-${{ github.ref }}
+  group:  CI-PP-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
