--- a/.github/workflows/CLI-PoemPostgres-CI.yml
+++ b/.github/workflows/CLI-PoemPostgres-CI.yml
@@ -45,10 +45,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
   
   Poem-Postgres-All:
     needs: [Poem-Postgres-None]
@@ -74,10 +76,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=auth,container,graphql,storage test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Postgres-Container:
     needs: [Poem-Postgres-None]
@@ -103,10 +107,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=container test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Postgres-Auth:
     needs: [Poem-Postgres-None]
@@ -132,10 +138,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=auth test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Postgres-Storage:
     needs: [Poem-Postgres-None]
@@ -161,10 +169,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=storage test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Postgres-GraphQL:
     needs: [Poem-Postgres-None]
@@ -190,7 +200,9 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d postgres -b poem --plugins=graphql,auth test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
