--- a/.github/workflows/CLI-PoemSqlite-CI.yml
+++ b/.github/workflows/CLI-PoemSqlite-CI.yml
@@ -45,10 +45,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
 
  
   Poem-Sqlite-All:
@@ -75,10 +77,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth,container,graphql,storage test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Sqlite-Container:
     needs: [Poem-Sqlite-None]
@@ -104,10 +108,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=container test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Sqlite-Auth:
     needs: [Poem-Sqlite-None]
@@ -133,10 +139,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=auth test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Sqlite-Storage:
     needs: [Poem-Sqlite-None]
@@ -162,10 +170,12 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=storage test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
 
   Poem-Sqlite-GraphQL:
     needs: [Poem-Sqlite-None]
@@ -191,7 +201,9 @@ jobs:
         with:
           command: run
           args: --bin create-rust-app -- create -c -d sqlite -b poem --plugins=graphql,auth test-project
+      - run: cd test-project
+      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
           command: build
-          args: --manifest-path=test-project/Cargo.toml
