--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,75 +22,50 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
-    name: Build and Initialize profile.dev Cache
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.3.0
-      - uses: rui314/setup-mold@v1
-      - uses: actions-rs/toolchain@v1.0.7
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - uses: actions/cache@v3.2.5
-        with:
-          path: |
-            ./.cargo/.build
-            ./target
-            ~/.cargo
-          key: ${{ runner.os }}-cargo-dev-${{ hashFiles('**/Cargo.lock') }}
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: build
 
-  check:
-    name: Check
-    needs: [build]
+  development-lint:
+    name: Clippy with debug-assertions
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.3.0
       - uses: rui314/setup-mold@v1
-      - uses: actions-rs/toolchain@v1.0.7
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
-      - uses: actions/cache@v3.2.5
-        with:
-          path: |
-            ./.cargo/.build
-            ./target
-            ~/.cargo
-          key: ${{ runner.os }}-cargo-dev-${{ hashFiles('**/Cargo.lock') }}
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: check
-
-  clippy:
-    name: Clippy
-    needs: [build]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3.3.0
-      - uses: rui314/setup-mold@v1
-      - uses: actions-rs/toolchain@v1.0.7
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
+      - run: rustup install stable
+      - run: rustup update
       - run: rustup component add clippy
-      - uses: actions/cache@v3.2.5
+      - uses: actions/cache@v3.2.6
         with:
           path: |
             ./.cargo/.build
             ./target
             ~/.cargo
           key: ${{ runner.os }}-cargo-dev-${{ hashFiles('**/Cargo.lock') }}
-      - uses: actions-rs/cargo@v1.0.3
+      - name: Clippy
+        uses: actions-rs/cargo@v1.0.3
         with:
           command: clippy
-          args: -- -D warnings
+          args: -- -D warnings -C debug-assertions=y
+  
+  production-lint:
+    name: Clippy without debug-assertions
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.3.0
+      - uses: rui314/setup-mold@v1
+      - run: rustup install stable
+      - run: rustup update
+      - run: rustup component add clippy
+      - uses: actions/cache@v3.2.6
+        with:
+          path: |
+            ./.cargo/.build
+            ./target
+            ~/.cargo
+          key: ${{ runner.os }}-cargo-prod-${{ hashFiles('**/Cargo.lock') }}
+      - name: Clippy
+        uses: actions-rs/cargo@v1.0.3
+        with:
+          command: clippy
+          args: -- -D warnings -C debug-assertions=n
 
   # things that use the cargo-test cache
   test:
@@ -99,11 +74,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3.3.0
       - uses: rui314/setup-mold@v1
-      - uses: actions-rs/toolchain@v1.0.7
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
+      - run: rustup install stable
+      - run: rustup update
       - uses: actions/cache@v3.2.5
         with:
           path: |
@@ -122,11 +94,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3.3.0
-      - uses: actions-rs/toolchain@v1.0.7
-        with:
-          profile: minimal
-          toolchain: stable
-          override: true
+      - run: rustup install stable
+      - run: rustup update
       - run: rustup component add rustfmt
       - uses: actions-rs/cargo@v1.0.3
         with:
