--- a/.github/workflows/CLI-ActixPostgres-CI.yml
+++ b/.github/workflows/CLI-ActixPostgres-CI.yml
@@ -45,8 +45,7 @@ jobs:
         with:
           command: run 
           args: --bin create-rust-app -- create -c -d postgres -b actix-web test-project
-      - run: cd test-project
-      - run: echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> ./backend/schema.rs
+      - run: cd test-project && echo "// @generated automatically by Diesel CLI.\ndiesel::table! {\n    todos (id) {\n        id -> Int4,\n        text -> Text,\n        created_at -> Timestamptz,\n        updated_at -> Timestamptz,\n    }\n}" >> backend/schema.rs
       - run: cargo dsync
       - uses: actions-rs/cargo@v1.0.3
         with:
